--- a/apps/robot_localization/CMakeLists.txt
+++ b/apps/robot_localization/CMakeLists.txt
@@ -11,12 +11,19 @@ generate_cpp_sources(FILES ${${app_name}_sources})
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(nav_msgs REQUIRED)
+find_package(geometry_msgs REQUIRED)
+find_package(std_msgs REQUIRED)
+find_package(tf2 REQUIRED)
+find_package(tf2_ros REQUIRED)
 
 add_executable(${app_name} ${${app_name}_sources})
 ament_target_dependencies(${app_name}
     rclcpp
     nav_msgs
-    # sensor_msgs
+    geometry_msgs
+    std_msgs
+    tf2
+    tf2_ros
 )
 
 target_link_libraries(${app_name} 
